--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/pages/home.css">
 
-    <title>AzureMine | Home</title>
+    <title>ItzTeam | Home</title>
 </head>
 <body>
     <!--Navbar-->
