--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <link rel="icon" href="images/logo.png">
-    <meta name="description" content="Free, modern and nice web template for Minecraft server.">
+    <meta name="description" content="Server yang berisikan projek besar.">
     <meta name="author" content="Astronawta">
 
     <link rel="stylesheet" href="css/global.css">
@@ -21,7 +21,7 @@
             <a href="index.html">
                 <div class="logo">
                     <img src="images/logo.png" alt="Server logo" class="logo-img">
-                    <h3 class="server-name">ExampleName</h3>
+                    <h3 class="server-name">ItzTeam-Server</h3>
                 </div>
             </a>
 
@@ -45,10 +45,10 @@
             <div class="left">
                 <div class="server-name">
                     <p>Survival Minecraft Server</p>
-                    <h1 class="minecraft-server-ip">mc.example.com</h1>
+                    <h1 class="minecraft-server-ip">Localhost:25565</h1>
                 </div>
                 <p class="server-description">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, consectetur explicabo. Dolor enim inventore minus neque officiis.
+                    server yang dimainkan untuk teman dekat saya :]
                     <br><br>Join and play with your friends.
                 </p>
                 <div class="buttons">
