--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="css/global.css">
   <link rel="stylesheet" href="css/pages/contact.css">
 
-  <title>AzureMine | Contact</title>
+  <title>ItzTeam | Contact</title>
 </head>
 <body>
   <!--Navbar-->
@@ -21,7 +21,7 @@
       <a href="index.html">
         <div class="logo">
           <img src="images/logo.png" alt="Server logo" class="logo-img">
-          <h3 class="server-name">ExampleName</h3>
+          <h3 class="server-name">ItzTeam-Server</h3>
         </div>
       </a>
 
@@ -42,7 +42,7 @@
   <section id="header">
     <div class="content">
       <div class="info">
-        <p class="minecraft-server-ip">mc.example.com</p>
+        <p class="minecraft-server-ip">localhost:25565</p>
         <h1 class="title"><span>Connect</span> with us</h1>
       </div>
       <p class="description">
