--- a/rules.html
+++ b/rules.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="css/global.css">
   <link rel="stylesheet" href="css/pages/rules.css">
 
-  <title>AzureMine | Rules</title>
+  <title>ItzTeam | Rules</title>
 </head>
 <body>
   <!--Navbar-->
@@ -21,7 +21,7 @@
       <a href="index.html">
         <div class="logo">
           <img src="images/logo.png" alt="Server logo" class="logo-img">
-          <h3 class="server-name">ExampleName</h3>
+          <h3 class="server-name">ItzTeam-Server</h3>
         </div>
       </a>
       <div class="hamburger">
@@ -41,7 +41,7 @@
   <section id="header">
     <div class="content">
       <div class="info">
-        <p class="minecraft-server-ip">mc.example.com</p>
+        <p class="minecraft-server-ip">localhost:25565</p>
         <h1 class="title">Follow the <span>rules</span></h1>
       </div>
       <p class="description">
