--- a/rules.html
+++ b/rules.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <link rel="icon" href="images/logo.png">
+  <link rel="icon" href="images/logo2.png">
   <meta name="description" content="Free, modern and nice web template for Minecraft server.">
   <meta name="author" content="Astronawta">
 
@@ -20,7 +20,7 @@
     <div class="menu-mobile">
       <a href="index.html">
         <div class="logo">
-          <img src="images/logo.png" alt="Server logo" class="logo-img">
+          <img src="images/logo2.png" alt="Server logo" class="logo-img">
           <h3 class="server-name">ItzTeam-Server</h3>
         </div>
       </a>
